[build-system]
requires = ['hashlib',
'hmac',
'json',
'logging',
'time',
'requests']
build-backend = "hatchling.build"

[project]
name = "tuyacloud"
version = "1.0"
authors = [
  { name="Artem Mironov", email="mrtxee@gmail.com" }
]
description = "Tuya Cloud Client over http for a daily use"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mrtxee/tuyacloud"
"Bug Tracker" = "https://github.com/mrtxee/tuyacloud/issues"